# lynx

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  logo.md
.config/: nextest.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  plugin-request.md
.github/workflows/: ci.yml  guardrails.yml
contexts/: agent.toml  interactive.toml  minimal.toml
crates/lynx-cli/: Cargo.toml
crates/lynx-cli/src/: bus.rs  cli.rs  error_display.rs  main.rs
crates/lynx-cli/src/commands/: alias.rs  audit.rs  benchmark.rs  browse.rs  completions.rs  config.rs  context.rs  cron.rs  daemon.rs  dashboard.rs  dev.rs  diag.rs  doctor.rs  event.rs  examples.rs  git.rs  help.rs  init.rs  install.rs  intro.rs  jobs.rs  kubectl_state.rs  migrate.rs  mod.rs  nerd_font.rs  onboard.rs  path.rs  plugin.rs  profile.rs  prompt.rs  refresh_state.rs  rollback.rs  run.rs  setup.rs  shell_error.rs  sync.rs  tap.rs  task.rs  theme.rs  theme_convert.rs  (+2 more)
crates/lynx-cli/src/commands/doctor/: checks.rs  mod.rs
crates/lynx-cli/src/commands/plugin/: mod.rs  path.rs  registry_ops.rs  scaffold.rs  shell_glue.rs
crates/lynx-config/: Cargo.toml
crates/lynx-config/src/: defaults.rs  lib.rs  migrate.rs  profile.rs  profile_activator.rs  schema.rs  snapshot.rs  validate.rs
crates/lynx-convert/: Cargo.toml
crates/lynx-convert/src/: emit.rs  fetch.rs  lib.rs  omp.rs  omz.rs
crates/lynx-core/: Cargo.toml
crates/lynx-daemon/: Cargo.toml
crates/lynx-daemon/src/: launchd.rs  lib.rs  main.rs  systemd.rs
crates/lynx-dashboard/: Cargo.toml
crates/lynx-dashboard/src/: lib.rs  server.rs
crates/lynx-dashboard/src/api/: config.rs  cron.rs  intros.rs  mod.rs  plugins.rs  profiles.rs  registry.rs  system.rs  themes.rs  workflows.rs
crates/lynx-dashboard/src/frontend/: index.html  mod.rs
crates/lynx-dashboard/src/frontend/css/: base.css  components.css  layout.css  pages.css
crates/lynx-dashboard/src/frontend/js/: api.js  app.js
crates/lynx-dashboard/src/frontend/js/components/: color-picker.js  sidebar.js
crates/lynx-dashboard/src/frontend/js/pages/: cron.js  intros.js  overview.js  plugins.js  registry.js  system.js  themes.js  workflows.js
crates/lynx-depgraph/: Cargo.toml
crates/lynx-depgraph/src/: depgraph.rs  lib.rs
crates/lynx-doctor/: Cargo.toml
crates/lynx-doctor/src/: checks.rs  lib.rs
crates/lynx-events/: Cargo.toml
crates/lynx-events/src/: bridge.rs  bus.rs  lib.rs  logger.rs  types.rs
crates/lynx-intro/: Cargo.toml
crates/lynx-intro/intros/: hacker.toml  minimal.toml  neofetch.toml  poweruser.toml  welcome.toml
crates/lynx-intro/src/: figlet.rs  lib.rs  loader.rs  renderer.rs  schema.rs  tokens.rs
crates/lynx-loader/: Cargo.toml
crates/lynx-manifest/: Cargo.toml
crates/lynx-manifest/src/: lib.rs  schema.rs  validator.rs
crates/lynx-plugin/: Cargo.toml
crates/lynx-plugin/src/: context_filter.rs  exec.rs  lazy.rs  lib.rs  lifecycle.rs  namespace.rs  registry.rs
crates/lynx-prompt/: Cargo.toml
crates/lynx-prompt/src/: assemble.rs  cache.rs  cache_keys.rs  color_apply.rs  evaluator.rs  lib.rs  renderer.rs  segment.rs
crates/lynx-prompt/src/segments/: aws_profile.rs  background_jobs.rs  battery.rs  cmd_duration.rs  conda_env.rs  context_badge.rs  custom.rs  dir.rs  docker.rs  exit_code.rs  gcp.rs  git.rs  git_action.rs  git_ahead_behind.rs  git_common.rs  git_sha.rs  git_stash.rs  git_time_since_commit.rs  golang_version.rs  hist_number.rs  hostname.rs  kubectl.rs  lang_version.rs  mod.rs  newline.rs  node_version.rs  os.rs  profile_badge.rs  prompt_char.rs  ruby_version.rs  rust_version.rs  shell.rs  ssh_indicator.rs  tasks.rs  terraform.rs  text.rs  time_segment.rs  username.rs  venv.rs  vi_mode.rs
crates/lynx-registry/: Cargo.toml
crates/lynx-registry/src/: autoplug.rs  bundle.rs  fetch.rs  index.rs  installer.rs  lib.rs  lock.rs  schema.rs  tap.rs
crates/lynx-shell/: Cargo.toml
crates/lynx-shell/src/: alias.rs  context.rs  init.rs  lazy_wrapper.rs  lib.rs  path.rs  safemode.rs
crates/lynx-studio/: Cargo.toml
crates/lynx-studio/src/: frontend.html  lib.rs  server.rs
crates/lynx-task/: Cargo.toml
crates/lynx-task/src/: lib.rs  parser.rs  scheduler.rs  schema.rs  store.rs
crates/lynx-template/: Cargo.toml
crates/lynx-template/src/: engine.rs  lib.rs
crates/lynx-test-utils/: Cargo.toml
crates/lynx-test-utils/src/: lib.rs
crates/lynx-theme/: Cargo.toml
crates/lynx-theme/src/: color.rs  colors.rs  lib.rs  loader.rs  ls_colors.rs  patch.rs  schema.rs  segments.rs  terminal.rs
crates/lynx-tui/: Cargo.toml
crates/lynx-tui/src/: gate.rs  item.rs  lib.rs  list.rs  onboard.rs  preview.rs  terminal.rs  workflow.rs
crates/lynx-workflow/: Cargo.toml
crates/lynx-workflow/src/: context.rs  executor.rs  job.rs  jobs.rs  lib.rs  params.rs  pty_runner.rs  runner.rs  schema.rs  store.rs
crates/lynx-workflow/tests/: executor.rs
docs/: architecture.md  config-and-sync.md  dashboard.md  ecosystem.md  index.md  plugin-api.md  plugin-authoring.md  registry-index-spec.md  theme-authoring.md  theme-vision.md  troubleshooting.md  workflows.md
docs/conformance/: decision-drift-matrix.toml
docs/decisions/: ADR-001-rust-thin-zsh.md  ADR-002-drop-omz-compat.md  ADR-003-agent-context.md  ADR-004-toml-everywhere.md  ADR-005-git-backed-sync.md  adr-001-rust-thin-zsh.md  adr-002-drop-omz-compat.md  adr-003-agent-context-detection.md  adr-004-toml-everywhere.md  adr-005-git-backed-sync.md
plugins/atuin/: plugin.toml
plugins/autosuggestions/: plugin.toml
plugins/eza/: plugin.toml
plugins/fzf/: plugin.toml
plugins/git/: plugin.toml
plugins/golang/: plugin.toml
plugins/kubectl/: plugin.toml
plugins/node/: plugin.toml
plugins/ruby/: plugin.toml
plugins/rust-ver/: plugin.toml
plugins/syntax-highlight/: plugin.toml
profiles/: default.toml  work.toml
registry/: README.md  index.toml
scripts/: check-env-vars.sh  smoke-test.sh  verify-guardrails.sh
shell/: init.zsh
shell/core/: hooks.zsh  loader.zsh
themes/: default.toml  minimal.toml  rkj-repo.toml  tokyo-night.toml
(+57 files in other folders)
