[workspace]
resolver = "2"
members = [
    "crates/lynx-core",
    "crates/lynx-config",
    "crates/lynx-manifest",
    "crates/lynx-events",
    "crates/lynx-template",
    "crates/lynx-shell",
    "crates/lynx-depgraph",
    "crates/lynx-prompt",
    "crates/lynx-theme",
    "crates/lynx-plugin",
    "crates/lynx-task",
    "crates/lynx-registry",
    "crates/lynx-daemon",
    "crates/lynx-convert",
    "crates/lynx-cli",
    "crates/lynx-studio",
    "crates/lynx-test-utils",
    "crates/lynx-intro",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["proxikal"]
license = "MIT"
repository = "https://github.com/lynx-sh/lynx"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "color"] }

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Task scheduling
cron = "0.12"
humantime = "2"
chrono = "0.4"

# Regex
regex = "1"

# Crypto / checksums
sha2 = "0.10"
hex = "0.4"

# HTTP server (theme studio)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client (registry fetch)
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

# HTTP client (sync, lightweight — D-026)
ureq = "2"

# Archive extraction
flate2 = "1"
tar = "0.4"

# Testing utilities
tempfile = "3"
