[package]
name = "lynx-cli"
description = "lx — the Lynx shell framework CLI"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "lx"
path = "src/main.rs"

[dependencies]
lynx-core     = { path = "../lynx-core" }
lynx-config   = { path = "../lynx-config" }
lynx-events   = { path = "../lynx-events" }
lynx-manifest = { path = "../lynx-manifest" }
lynx-plugin   = { path = "../lynx-plugin" }
lynx-theme   = { path = "../lynx-theme" }
lynx-studio  = { path = "../lynx-studio" }
lynx-prompt  = { path = "../lynx-prompt" }
lynx-task    = { path = "../lynx-task" }
lynx-daemon  = { path = "../lynx-daemon" }
lynx-depgraph = { path = "../lynx-depgraph" }
lynx-shell    = { path = "../lynx-shell" }
lynx-registry = { path = "../lynx-registry" }
clap.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
which = "6"
lynx-intro = { version = "0.1.0", path = "../lynx-intro" }

[dev-dependencies]
lynx-test-utils = { path = "../lynx-test-utils" }
tempfile = { workspace = true }
