[package]
name = "lynx-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "lynx-daemon"
path = "src/main.rs"

[lib]
name = "lynx_daemon"
path = "src/lib.rs"

[dependencies]
lynx-core = { path = "../lynx-core" }
lynx-config = { path = "../lynx-config" }
lynx-manifest = { path = "../lynx-manifest" }
lynx-depgraph = { path = "../lynx-depgraph" }
lynx-plugin = { path = "../lynx-plugin" }
lynx-events = { path = "../lynx-events" }
lynx-task = { path = "../lynx-task" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
