[package]
description = "Background daemon service management (launchd on macOS, systemd on Linux)"
name = "lynx-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "lynx-daemon"
path = "src/main.rs"

[lib]
name = "lynx_daemon"
path = "src/lib.rs"

[dependencies]
lynx-core = { path = "../lynx-core" }
lynx-task = { path = "../lynx-task" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
