[package]
name = "lynx-dashboard"
description = "Lynx Dashboard — local web UI for managing themes, plugins, workflows, and system config"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
lynx-core     = { path = "../lynx-core" }
lynx-config   = { path = "../lynx-config" }
lynx-theme    = { path = "../lynx-theme" }
lynx-doctor   = { path = "../lynx-doctor" }
lynx-registry = { path = "../lynx-registry" }
lynx-task     = { path = "../lynx-task" }
lynx-intro    = { path = "../lynx-intro" }
lynx-workflow = { path = "../lynx-workflow" }
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
async-stream = "0.3"
