[package]
description = "Plugin dependency graph resolver — topological sort with cycle detection"
name = "lynx-depgraph"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
lynx-core     = { path = "../lynx-core" }
lynx-manifest = { path = "../lynx-manifest" }
lynx-events   = { path = "../lynx-events" }
lynx-shell    = { path = "../lynx-shell" }
serde.workspace = true
thiserror.workspace = true
