[package]
description = "Shell startup intro renderer — ASCII art, figlet fonts, system info tokens"
name = "lynx-intro"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
lynx-core = { path = "../lynx-core" }
lynx-config = { path = "../lynx-config" }
lynx-template = { path = "../lynx-template" }
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
sysinfo = { version = "0.38", features = ["system"] }
figlet-rs = "1.0.0"

[dev-dependencies]
tempfile.workspace = true
