[package]
description = "Plugin manifest (plugin.toml) schema, parser, and validator"
name = "lynx-manifest"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
lynx-core = { path = "../lynx-core" }
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
