[package]
description = "Plugin lifecycle management — loading, exec script generation, context filtering"
name = "lynx-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
lynx-core     = { path = "../lynx-core" }
lynx-manifest = { path = "../lynx-manifest" }
lynx-events   = { path = "../lynx-events" }
lynx-shell    = { path = "../lynx-shell" }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
