[package]
name = "lynx-prompt"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
lynx-core = { path = "../lynx-core" }
lynx-config = { path = "../lynx-config" }
lynx-events = { path = "../lynx-events" }
lynx-template = { path = "../lynx-template" }
lynx-theme = { path = "../lynx-theme" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
futures = "0.3"

[dev-dependencies]
tempfile = "3"
