[package]
description = "Shell integration layer — context detection, init script generation, safe mode"
name = "lynx-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
lynx-core = { path = "../lynx-core" }
lynx-config = { path = "../lynx-config" }
lynx-manifest = { path = "../lynx-manifest" }
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
