[package]
name = "lynx-studio"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
lynx-core    = { path = "../lynx-core" }
lynx-config  = { path = "../lynx-config" }
lynx-theme   = { path = "../lynx-theme" }
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
