[package]
description = "Cron task scheduler — TOML-based task definitions with logging and notifications"
name = "lynx-task"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
lynx-core = { path = "../lynx-core" }
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
cron.workspace = true
chrono.workspace = true
humantime.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
