[package]
description = "Lightweight mustache-style template engine for intro and prompt rendering"
name = "lynx-template"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
lynx-core = { path = "../lynx-core" }
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
