[package]
description = "Shared test utilities — temp dirs, zsh runner, workspace path resolution"
name = "lynx-test-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
lynx-core = { path = "../lynx-core" }
lynx-config = { path = "../lynx-config" }
tempfile = "3"
