[package]
name = "lynx-workflow"
description = "Workflow TOML schema, parsing, validation, and execution for Lynx"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
lynx-core = { path = "../lynx-core" }
lynx-shell = { path = "../lynx-shell" }
portable-pty = { workspace = true }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
